<resources>
    <string name="app_name">PasswordNotify</string>

    <!-- Login -->
    <string name="auth_title_keyguard_secure">Password Notify</string>
    <string name="auth_message_keyguard_secure">Desbloquei seu app realizando um login rápido</string>
    <string name="inform_your_password">Informe sua senha</string>
    <string name="inform_your_password_confirmation">Confirme a senha</string>
    <string name="btn_do_login">Login</string>
    <string name="error_password_not_found">Informe a senha</string>
    <string name="error_confirmation_not_found">Informa a confirmação da senha</string>
    <string name="error_confirmation_not_match">A confirmação da senha não está igual a senha</string>
    <string name="error_password_not_match_on_base">Senha inválida</string>

    <!-- Generate Password -->
    <string name="option_numbers">Números</string>
    <string name="option_upper">LETRAS MAISCULAS</string>
    <string name="option_lower">letras minusculas</string>
    <string name="option_accents">Letras com acentos</string>
    <string name="option_special">Caracteres especiais</string>
    <string name="option_required">Obrigatório</string>
    <string name="action_generate">Gerar Senha</string>
    <string name="action_register_password">Registrar Senha</string>
    <string name="message_invalid_length">Informe um tamanho válido de 1 a 1000!</string>
    <string name="message_invalid_amout">Informe um período válido</string>
    <string name="message_error_generate_the_password">É necessário gerar a senha para prosseguir</string>
    <string name="inform_a_identify_name">Informe um nome de identificação</string>

    <!-- Manager Password -->
    <string name="for_security_enable_notifications">Por segurança, habilite as notificações de mudança da senha a cada: %s TEMPOS</string>
    <string name="message_invalid_name">Informe um nome!</string>
    <string name="new_notification">Notificação</string>
    <string name="update_password">Manter alterações</string>
    <string name="remove_password">Deletar senha</string>
    <string name="schedule_a_notification_for_each">Agende uma notificação de atualização da senha à cada %s dias (caso 0, não haverá notificações)</string>
    <string name="notification_title_change_your_password">Atualize a sua senha</string>
    <string name="notification_message_change_your_password">Ao atualizar a sua senha você mantem suas contas associadas seguras, gere uma nova e a utilize.</string>
    <string name="notification_not_found">Não há uma notificação de atualização agendada.</string>
    <string name="notification_description">Notificação criada em %s, agendada para %s.</string>
    <string name="dialog_message_confirmation_to_update">Deseja atualizar a sua senha?</string>
    <string name="dialog_message_confirmation_to_delete">Deseja deletar essa senha permanentemente?</string>
    <string name="password_updated">Atualizado</string>
    <string name="generated_password">Senha gerada</string>
    <string name="password_length">Quantidade de caracteres na senha</string>
    <string name="password_name">Identificador da senha</string>

    <!-- Lits Passwords -->
    <string name="open_new_password_screen">Gerar nova senha</string>
    <string name="do_you_wish_use_your_keyguard_secure">Deseja utilizar sua chave de segurança para realizar o próximo login?</string>
</resources>