<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.generatepassword.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <EditText
            android:id="@+id/edtLength"
            style="@style/EditTextNumber" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkNumbers"
                style="@style/CheckBox"
                android:checked="true"
                android:text="@string/option_numbers" />

            <CheckBox
                android:id="@+id/checkRequiredNumbers"
                style="@style/CheckBox"
                android:checked="true"
                android:text="@string/option_required" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkUpperCase"
                style="@style/CheckBox"
                android:text="@string/option_upper" />

            <CheckBox
                android:id="@+id/checkRequiredUpperCase"
                style="@style/CheckBox"
                android:text="@string/option_required" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkLowerCase"
                style="@style/CheckBox"
                android:text="@string/option_lower" />

            <CheckBox
                android:id="@+id/checkRequiredLowerCase"
                style="@style/CheckBox"
                android:text="@string/option_required" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkAccent"
                style="@style/CheckBox"
                android:text="@string/option_accents" />

            <CheckBox
                android:id="@+id/checkRequiredAccent"
                style="@style/CheckBox"
                android:text="@string/option_required" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkSpecial"
                style="@style/CheckBox"
                android:text="@string/option_special" />

            <CheckBox
                android:id="@+id/checkRequiredSpecial"
                style="@style/CheckBox"
                android:text="@string/option_required" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtPassword"
            style="@style/EditText" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGeneratePassword"
            style="@style/Button"
            android:text="@string/action_generate" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGenerateRegister"
            style="@style/Button"
            android:text="@string/action_register_password" />
    </LinearLayout>
</ScrollView>