<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.managerpassword.ManagerPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtName"
            style="@style/EditText" />

        <Button
            android:id="@+id/btnScheduleNotification"
            style="@style/Button"
            android:text="@string/new_notification" />

        <TextView
            android:id="@+id/labelNotificationsNotFound"
            style="@style/TextView"
            android:layout_gravity="center"
            android:text="@string/notification_not_found" />

        <TextView
            android:id="@+id/labelNotificationDescription"
            style="@style/TextView"
            android:layout_gravity="center"
            android:visibility="gone" />

        <include layout="@layout/password_permissions" />

        <Button
            android:id="@+id/btnUpdaterManager"
            style="@style/Button"
            android:text="@string/update_password" />

        <Button
            android:id="@+id/btnDelete"
            style="@style/Button"
            android:text="@string/remove_password" />
    </LinearLayout>

</ScrollView>